# OMIS_lab_6

./: .gitignore  README.md  main.py  pyproject.toml
backend/: config.py  database.py  main.py
backend/ml/: __init__.py  lstm.py  models.py  random_forest.py
backend/models/: __init__.py  equipment.py  maintenance.py  user.py
backend/routers/: __init__.py  auth.py  dashboard.py  equipment.py  events.py  predictions.py  reports.py  sensors.py
backend/schemas/: __init__.py  dashboard.py  equipment.py  events.py  maintenance.py  prediction.py  user.py
backend/services/: __init__.py  analysis.py  data_collection.py  notifications.py  seed.py
backend/utils/: __init__.py  auth.py  dependencies.py  email.py  reports.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/api/: index.js
frontend/src/components/Dashboard/: Dashboard.css  Dashboard.js
frontend/src/components/Devices/: Devices.css  Devices.js
frontend/src/components/Events/: Events.css  Events.js
frontend/src/components/Layout/: Layout.css  Layout.js
frontend/src/components/Login/: Login.css  Login.js
frontend/src/context/: AuthContext.js
